src/test/ui/macros/macro_path_as_generic_bound.stderr
error[E0405]: cannot find trait `A` in `m::m2`
  --> $DIR/macro_path_as_generic_bound.rs:7:13
   |
LL | foo!(m::m2::A);
   |             ^ not found in `m::m2`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0405`.
